--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,11 @@ spring:
     username: sa
     password:
     driver-class-name: org.h2.Driver
+  devtools:
+    livereload:
+      enabled: true
+  thymeleaf:
+    cache: false
 
   jpa:
     hibernate:
