--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-devtools'
 	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6'
+	//compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.15'
+	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 	compile('org.thymeleaf.extras:thymeleaf-extras-java8time')
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
