--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,11 @@
 spring:
   datasource:
-    url: jdbc:h2:tcp://localhost/~/buskingbusking
+    url: jdbc:mariadb://192.168.219.100:3306/buskingbusking
+#    url: jdbc:h2:tcp://localhost/~/buskingbusking
 #    url: jdbc:h2:tcp://localhost:9092/mem:buskingbusking
-    username: sa
-    password:
-    driver-class-name: org.h2.Driver
+    username: sorry
+    password: 1111
+    driver-class-name: org.mariadb.jdbc.Driver
   devtools:
     livereload:
       enabled: true
