--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,26 +1,26 @@
 spring:
   datasource:
-    url: jdbc:mariadb://192.168.219.100:3306/buskingbusking
-#    url: jdbc:h2:tcp://localhost/~/buskingbusking
+#    url: jdbc:mariadb://192.168.219.100:3306/buskingbusking
 #    url: jdbc:h2:tcp://localhost:9092/mem:buskingbusking
-    username: sorry
-    password: 1111
-    driver-class-name: org.mariadb.jdbc.Driver
+#    username: sorry
+#    password: 1111
+#    driver-class-name: org.mariadb.jdbc.Driver
+      url: jdbc:h2:tcp://localhost/~/buskingbusking
+      username: sa
+      passowrd:
+      driver-class-name: org.h2.Driver
   devtools:
     livereload:
       enabled: true
   thymeleaf:
     cache: false
-
-
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     properties:
       hibernate:
           # show_sql: true
       format_sql: true
-
 logging:
     level:
       org.hibernate.SQL: debug
