--- a/build.gradle
+++ b/build.gradle
@@ -19,17 +19,17 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-devtools'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
-
+	implementation 'org.springframework.boot:spring-boot-starter-batch'
 	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.6'
 	//compile group: 'mysql', name: 'mysql-connector-java', version: '8.0.15'
+
 	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 	compile('org.thymeleaf.extras:thymeleaf-extras-java8time')
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.h2database:h2'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-
-
+	testCompile('org.springframework.batch:spring-batch-test')
 }
 
 test {
