debug : NoHandlerFoundException 추가 테스트 진행

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,6 +10,8 @@ server:
       prefix: access
     basedir: /
 spring:
+  resources:
+    add-mappings: false
   datasource:
       url: jdbc:h2:tcp://localhost/~/buskingbusking
       username: sa
